[package]
name = "carbono"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Carbono is a simple Rust API extension for chrono DateTime."
repository = "https://github.com/tjardoo/carbono"
documentation = "https://docs.rs/carbono"
keywords = ["calendar", "date", "time"]

[dependencies]
chrono = "0.4.25"
chronoutil = "0.2.4"

[features]
testing = []
